force-app/main/default/objects/Contract/fields/SM_CT_Account_Person_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>SM_CT_Account_Person_Birthdate__c</fullName>
    <formula>Account.PersonBirthdate</formula>
    <label>Account Person Birthdate</label>
    <type>Date</type>
</CustomField>