force-app/main/default/objects/Contract/fields/SM_CT_Account_SSN__c.field-meta.xml
<CustomField>
    <fullName>SM_CT_Account_SSN__c</fullName>
    <formula>Account.SM_SSN__pc</formula>
    <label>Account SSN</label>
    <type>Text</type>
</CustomField>