force-app/main/default/objects/Contract/fields/SM_CT_AccountPersonEmail__c.field-meta.xml
<CustomField>
    <fullName>SM_CT_AccountPersonEmail__c</fullName>
    <formula>Account.PersonEmail</formula>
    <label>Account Person Email</label>
    <type>Text</type>
</CustomField>