force-app/main/default/objects/Contract/fields/SM_CT_Payment_Method_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_CT_Payment_Method_Bank_Name__c</fullName>
    <formula>SM_Payment_Method__r.SM_Bank__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method Bank Name</label>
    <type>Text</type>
</CustomField>