force-app/main/default/objects/Contract/fields/SM_CT_Physical_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_CT_Physical_Address_Name__c</fullName>
    <formula>SUBSTITUTE(SM_Physical_address__r.Name, &quot;,&quot;, &quot;.&quot;)</formula>
    <label>Physical Address Name</label>
    <type>Text</type>
</CustomField>