force-app/main/default/objects/Contract/fields/SM_CT_Postal_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_CT_Postal_Address_Name__c</fullName>
    <formula>SM_Postal_address__r.Name</formula>
    <label>Postal Address Name</label>
    <type>Text</type>
</CustomField>