force-app/main/default/objects/Contract/fields/SM_Currently_payment_status__c.field-meta.xml
<CustomField>
    <fullName>SM_Currently_payment_status__c</fullName>
    <label>Currently payment status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up to date</fullName>
            </value>
            <value>
                <fullName>In arrears</fullName>
            </value>
            <value>
                <fullName>Being in default</fullName>
            </value>
            <value>
                <fullName>Fine paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>