force-app/main/default/objects/Contract/fields/SM_Customer_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>SM_Customer_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo se activara cuando el contrato esta pendiente de CANCELACION, pero no se puede cancelar por tener pagos en proceso</description>
    <label>Customer Cancellation</label>
    <type>Checkbox</type>
</CustomField>