force-app/main/default/objects/Contract/fields/SM_Date_Sent_to_postal_address__c.field-meta.xml
<CustomField>
    <fullName>SM_Date_Sent_to_postal_address__c</fullName>
    <label>Date Sent to postal address</label>
    <type>DateTime</type>
</CustomField>