force-app/main/default/objects/Contract/fields/SM_DayReturnOriginalToPaymentDay__c.field-meta.xml
<CustomField>
    <fullName>SM_DayReturnOriginalToPaymentDay__c</fullName>
    <label>Day return to original payment day</label>
    <type>Date</type>
</CustomField>