force-app/main/default/objects/Contract/fields/SM_Dispute_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Dispute_Name__c</fullName>
    <externalId>true</externalId>
    <label>Dispute Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>