force-app/main/default/objects/Contract/fields/SM_Dispute_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_Dispute_Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Dispute Number</label>
    <type>AutoNumber</type>
</CustomField>