force-app/main/default/objects/Contract/fields/SM_Email_to_send_contract__c.field-meta.xml
<CustomField>
    <fullName>SM_Email_to_send_contract__c</fullName>
    <label>Email to send contract</label>
    <type>Email</type>
</CustomField>