force-app/main/default/objects/Contract/fields/SM_Exp_date__c.field-meta.xml
<CustomField>
    <fullName>SM_Exp_date__c</fullName>
    <label>Exp date</label>
    <type>Date</type>
</CustomField>