force-app/main/default/objects/Contract/fields/SM_Failed_AC_Fees__c.field-meta.xml
<CustomField>
    <fullName>SM_Failed_AC_Fees__c</fullName>
    <description>This field Holds the Fees that were rejected by Chargent</description>
    <inlineHelpText>This field Holds the Fees that were rejected by Chargent</inlineHelpText>
    <label>Failed AC Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>