force-app/main/default/objects/Contract/fields/SM_Failed_SB_Fees__c.field-meta.xml
<CustomField>
    <fullName>SM_Failed_SB_Fees__c</fullName>
    <description>This field will save the failed transactions for suscription</description>
    <inlineHelpText>This field will save the failed transactions for suscription</inlineHelpText>
    <label>Failed Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>