force-app/main/default/objects/Contract/fields/SM_FechaBase_ACRC__c.field-meta.xml
<CustomField>
    <fullName>SM_FechaBase_ACRC__c</fullName>
    <formula>IF(
    NOT(ISBLANK(SM_Upgraded_Date__c)),
    SM_Upgraded_Date__c,
    IF(
        ISBLANK(SM_AC_start_date__c),
        SM_Start_date__c,
        SM_AC_start_date__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FechaBase_ACRC</label>
    <type>Date</type>
</CustomField>