force-app/main/default/objects/Contract/fields/SM_Fix__c.field-meta.xml
<CustomField>
    <fullName>SM_Fix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fix</label>
    <type>Checkbox</type>
</CustomField>