force-app/main/default/objects/Contract/fields/SM_Frecuency__c.field-meta.xml
<CustomField>
    <fullName>SM_Frecuency__c</fullName>
    <label>Frecuency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>