force-app/main/default/objects/Contract/fields/SM_Full_Payment__c.field-meta.xml
<CustomField>
    <fullName>SM_Full_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Payment</label>
    <type>Checkbox</type>
</CustomField>