force-app/main/default/objects/Contract/fields/SM_Generates_dispute__c.field-meta.xml
<CustomField>
    <fullName>SM_Generates_dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generates dispute</label>
    <type>Checkbox</type>
</CustomField>