force-app/main/default/objects/Contract/fields/SM_Id_Salesforce_LCS__c.field-meta.xml
<CustomField>
    <fullName>SM_Id_Salesforce_LCS__c</fullName>
    <externalId>true</externalId>
    <label>Id Salesforce LCS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>