force-app/main/default/objects/Contract/fields/SM_InterestRate__c.field-meta.xml
<CustomField>
    <fullName>SM_InterestRate__c</fullName>
    <formula>SM_Annual_Interest__c/SM_Plan_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Interest Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>