force-app/main/default/objects/Contract/fields/SM_Is_Migrated__c.field-meta.xml
<CustomField>
    <fullName>SM_Is_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Migrated</label>
    <type>Checkbox</type>
</CustomField>