force-app/main/default/objects/Contract/fields/SM_IsACouplePlan__c.field-meta.xml
<CustomField>
    <fullName>SM_IsACouplePlan__c</fullName>
    <formula>IF(
				ISBLANK(SM_CoupleContract__c),
				&apos;&apos;,
				&apos;X&apos;
)</formula>
    <label>Is a Couple Plan?</label>
    <type>Text</type>
</CustomField>