force-app/main/default/objects/Contract/fields/SM_IVU_State__c.field-meta.xml
<CustomField>
    <fullName>SM_IVU_State__c</fullName>
    <label>% IVU (State)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>