force-app/main/default/objects/Contract/fields/SM_IVU_State_Monthly_offer__c.field-meta.xml
<CustomField>
    <fullName>SM_IVU_State_Monthly_offer__c</fullName>
    <formula>SM_IVU_State__c * SM_Monthly_offer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVU (State) Monthly offer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>