force-app/main/default/objects/Contract/fields/SM_Last_collection_executed__c.field-meta.xml
<CustomField>
    <fullName>SM_Last_collection_executed__c</fullName>
    <label>Last collection executed</label>
    <summarizedField>SM_Payment__c.CreatedDate</summarizedField>
    <summaryForeignKey>SM_Payment__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>