force-app/main/default/objects/Contract/fields/SM_Late_payment_fee_collected__c.field-meta.xml
<CustomField>
    <fullName>SM_Late_payment_fee_collected__c</fullName>
    <label>Late payment fee collected</label>
    <summarizedField>SM_Payment__c.SM_Penalty_value__c</summarizedField>
    <summaryFilterItems>
        <field>SM_Payment__c.SM_Type__c</field>
        <operation>equals</operation>
        <value>Late payment fee</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_Payment__c.SM_Penalty_value__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>ACCEPTED</value>
    </summaryFilterItems>
    <summaryForeignKey>SM_Payment__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>