force-app/main/default/objects/Contract/fields/SM_LatePaymentFeeDocument__c.field-meta.xml
<CustomField>
    <fullName>SM_LatePaymentFeeDocument__c</fullName>
    <formula>SM_Process_automation_by_product_family__r.Company_setting__r.SM_Late_payment_fee__c + 
SM_Process_automation_by_product_family__r.Company_setting__r.SM_Late_payment_fee__c * SM_Process_automation_by_product_family__r.Company_setting__r.SM_IVU_Municipal_Amount__c +
SM_Process_automation_by_product_family__r.Company_setting__r.SM_Late_payment_fee__c * SM_Process_automation_by_product_family__r.Company_setting__r.SM_IVU_State_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late payment fee Document</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>