force-app/main/default/objects/Contract/fields/SM_Loan_Interest__c.field-meta.xml
<CustomField>
    <fullName>SM_Loan_Interest__c</fullName>
    <label>Loan Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>