force-app/main/default/objects/Contract/fields/SM_Loan_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Loan_Maturity_Date__c</fullName>
    <label>Loan Maturity Date</label>
    <type>Date</type>
</CustomField>