force-app/main/default/objects/Contract/fields/SM_Loan_Payment__c.field-meta.xml
<CustomField>
    <fullName>SM_Loan_Payment__c</fullName>
    <label>Loan Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>