force-app/main/default/objects/Contract/fields/SM_Loan_Principal__c.field-meta.xml
<CustomField>
    <fullName>SM_Loan_Principal__c</fullName>
    <label>Loan Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>