force-app/main/default/objects/Contract/fields/SM_Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>SM_Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card Refinancing</fullName>
            </value>
            <value>
                <fullName>Debt consolidation</fullName>
            </value>
            <value>
                <fullName>Home Buying</fullName>
            </value>
            <value>
                <fullName>HomeMajor Purchase</fullName>
            </value>
            <value>
                <fullName>Car Buying</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Moving and relocation</fullName>
            </value>
            <value>
                <fullName>Medical expenses</fullName>
            </value>
            <value>
                <fullName>Support a family or friend</fullName>
            </value>
            <value>
                <fullName>Other Improvement</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Credit Consolidated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>