force-app/main/default/objects/Contract/fields/SM_Marital_Status_ESP__c.field-meta.xml
<CustomField>
    <fullName>SM_Marital_Status_ESP__c</fullName>
    <formula>CASE(SM_CT_Account_Marital_Status__c,
   &quot;Married&quot;, &quot;Casad&quot;,
   &quot;Single&quot;, &quot;Solter&quot;,
   &quot;Divorced&quot;, &quot;Divorciad&quot;,
   &quot;Widowed&quot;, &quot;Viud&quot;,
   &quot;Separated&quot;, &quot;Separad&quot;,
   SM_CT_Account_Marital_Status__c)
 +CASE(Account.PersonContact.SM_Gender__c,
   &quot;Female&quot;, &quot;a&quot;,
   &quot;o&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marital Status ESP</label>
    <type>Text</type>
</CustomField>