force-app/main/default/objects/Contract/fields/SM_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Maturity_Date__c</fullName>
    <formula>IF( OR(ISBLANK(SM_Loan_Maturity_Date__c ), ISNULL(SM_Loan_Maturity_Date__c )) ,
IF(OR(ISBLANK(SM_AC_start_date__c), ISNULL(SM_AC_start_date__c )) ,SM_AC_start_date__c +365, SM_Start_date__c +365)
,SM_Loan_Maturity_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity_Date</label>
    <type>Date</type>
</CustomField>