force-app/main/default/objects/Contract/fields/SM_Mes_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>SM_Mes_START_DATE__c</fullName>
    <formula>text(DAY(SM_Start_date__c )) &amp; &apos; de &apos; &amp;
CASE(MONTH(SM_Start_date__c ),
1, &quot;enero&quot;,
2, &quot;febrero&quot;,
3, &quot;marzo&quot;,
4, &quot;abril&quot;,
5, &quot;mayo&quot;,
6, &quot;junio&quot;,
7, &quot;julio&quot;,
8, &quot;agosto&quot;,
9, &quot;septiembre&quot;,
10, &quot;octubre&quot;,
11, &quot;noviembre&quot;,
12, &quot;diciembre&quot;,
&quot;0&quot;
)
&amp; &apos; del &apos; &amp;
text( YEAR(SM_Start_date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes_START_DATE</label>
    <type>Text</type>
</CustomField>