force-app/main/default/objects/Contract/fields/SM_Monthly_offer__c.field-meta.xml
<CustomField>
    <fullName>SM_Monthly_offer__c</fullName>
    <label>Net Monthly offer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>