force-app/main/default/objects/Contract/fields/SM_Monthly_Offer_In_Words__c.field-meta.xml
<CustomField>
    <fullName>SM_Monthly_Offer_In_Words__c</fullName>
    <formula>SM_Monthly_offer_Whole_Text__c &amp;
IF(
    ROUND((SM_Monthly_offer__c - FLOOR(SM_Monthly_offer__c)) * 100, 0) &gt; 0,
    &quot; con &quot; &amp; SM_Monthly_Offer_Decimals_Text__c,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Offer In Words</label>
    <type>Text</type>
</CustomField>