force-app/main/default/objects/Contract/fields/SM_Monthly_offer_Whole_Text__c.field-meta.xml
<CustomField>
    <fullName>SM_Monthly_offer_Whole_Text__c</fullName>
    <formula>CASE(
    FLOOR(SM_Monthly_offer__c),
    0, &quot;cero&quot;,
    1, &quot;uno&quot;,
    2, &quot;dos&quot;,
    3, &quot;tres&quot;,
    4, &quot;cuatro&quot;,
    5, &quot;cinco&quot;,
    6, &quot;seis&quot;,
    7, &quot;siete&quot;,
    8, &quot;ocho&quot;,
    9, &quot;nueve&quot;,
    10, &quot;diez&quot;,
    11, &quot;once&quot;,
    12, &quot;doce&quot;,
    13, &quot;trece&quot;,
    14, &quot;catorce&quot;,
    15, &quot;quince&quot;,
    16, &quot;dieciséis&quot;,
    17, &quot;diecisiete&quot;,
    18, &quot;dieciocho&quot;,
    19, &quot;diecinueve&quot;,
    20, &quot;veinte&quot;,
    30, &quot;treinta&quot;,
    40, &quot;cuarenta&quot;,
    50, &quot;cincuenta&quot;,
    60, &quot;sesenta&quot;,
    70, &quot;setenta&quot;,
    80, &quot;ochenta&quot;,
    90, &quot;noventa&quot;,
    100, &quot;cien&quot;,
    200, &quot;doscientos&quot;,
    300, &quot;trescientos&quot;,
    400, &quot;cuatrocientos&quot;,
    500, &quot;quinientos&quot;,
    600, &quot;seiscientos&quot;,
    700, &quot;setecientos&quot;,
    800, &quot;ochocientos&quot;,
    900, &quot;novecientos&quot;,
    1000, &quot;mil&quot;,

    IF(
        FLOOR(SM_Monthly_offer__c) &lt; 30,
        &quot;veinti&quot; &amp;
        CASE(
            MOD(FLOOR(SM_Monthly_offer__c),10),
            1,&quot;uno&quot;,2,&quot;dos&quot;,3,&quot;tres&quot;,4,&quot;cuatro&quot;,5,&quot;cinco&quot;,
            6,&quot;seis&quot;,7,&quot;siete&quot;,8,&quot;ocho&quot;,9,&quot;nueve&quot;,&quot;&quot;
        ),

        IF(
            FLOOR(SM_Monthly_offer__c) &lt; 100,
            CASE(
                FLOOR(FLOOR(SM_Monthly_offer__c)/10)*10,
                30,&quot;treinta&quot;,
                40,&quot;cuarenta&quot;,
                50,&quot;cincuenta&quot;,
                60,&quot;sesenta&quot;,
                70,&quot;setenta&quot;,
                80,&quot;ochenta&quot;,
                90,&quot;noventa&quot;,
                &quot;&quot;
            )
            &amp; &quot; y &quot; &amp;
            CASE(
                MOD(FLOOR(SM_Monthly_offer__c),10),
                1,&quot;uno&quot;,2,&quot;dos&quot;,3,&quot;tres&quot;,4,&quot;cuatro&quot;,5,&quot;cinco&quot;,
                6,&quot;seis&quot;,7,&quot;siete&quot;,8,&quot;ocho&quot;,9,&quot;nueve&quot;,&quot;&quot;
            ),

            CASE(
                FLOOR(FLOOR(SM_Monthly_offer__c)/100)*100,
                100,&quot;ciento&quot;,
                200,&quot;doscientos&quot;,
                300,&quot;trescientos&quot;,
                400,&quot;cuatrocientos&quot;,
                500,&quot;quinientos&quot;,
                600,&quot;seiscientos&quot;,
                700,&quot;setecientos&quot;,
                800,&quot;ochocientos&quot;,
                900,&quot;novecientos&quot;,
                &quot;&quot;
            )
            &amp; &quot; &quot; &amp;
            CASE(
                MOD(FLOOR(SM_Monthly_offer__c),100),
                0,&quot;&quot;,
                1,&quot;uno&quot;,2,&quot;dos&quot;,3,&quot;tres&quot;,4,&quot;cuatro&quot;,5,&quot;cinco&quot;,
                6,&quot;seis&quot;,7,&quot;siete&quot;,8,&quot;ocho&quot;,9,&quot;nueve&quot;,
                10,&quot;diez&quot;,11,&quot;once&quot;,12,&quot;doce&quot;,13,&quot;trece&quot;,14,&quot;catorce&quot;,
                15,&quot;quince&quot;,16,&quot;dieciséis&quot;,17,&quot;diecisiete&quot;,18,&quot;dieciocho&quot;,19,&quot;diecinueve&quot;,
                20,&quot;veinte&quot;,

                IF(
                    MOD(FLOOR(SM_Monthly_offer__c),100) &lt; 30,
                    &quot;veinti&quot; &amp;
                    CASE(
                        MOD(FLOOR(SM_Monthly_offer__c),10),
                        1,&quot;uno&quot;,2,&quot;dos&quot;,3,&quot;tres&quot;,4,&quot;cuatro&quot;,5,&quot;cinco&quot;,
                        6,&quot;seis&quot;,7,&quot;siete&quot;,8,&quot;ocho&quot;,9,&quot;nueve&quot;,&quot;&quot;
                    ),

                    CASE(
                        FLOOR(MOD(FLOOR(SM_Monthly_offer__c),100)/10)*10,
                        30,&quot;treinta&quot;,
                        40,&quot;cuarenta&quot;,
                        50,&quot;cincuenta&quot;,
                        60,&quot;sesenta&quot;,
                        70,&quot;setenta&quot;,
                        80,&quot;ochenta&quot;,
                        90,&quot;noventa&quot;,
                        &quot;&quot;
                    )
                    &amp; &quot; y &quot; &amp;
                    CASE(
                        MOD(FLOOR(SM_Monthly_offer__c),10),
                        1,&quot;uno&quot;,2,&quot;dos&quot;,3,&quot;tres&quot;,4,&quot;cuatro&quot;,5,&quot;cinco&quot;,
                        6,&quot;seis&quot;,7,&quot;siete&quot;,8,&quot;ocho&quot;,9,&quot;nueve&quot;,&quot;&quot;
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Offer Whole Text</label>
    <type>Text</type>
</CustomField>