force-app/main/default/objects/Contract/fields/SM_Mult__c.field-meta.xml
<CustomField>
    <fullName>SM_Mult__c</fullName>
    <label>Mult</label>
    <length>10</length>
    <type>Text</type>
</CustomField>