force-app/main/default/objects/Contract/fields/SM_Net_AC__c.field-meta.xml
<CustomField>
    <fullName>SM_Net_AC__c</fullName>
    <formula>SM_Total_ac__c + SM_IVU_State_AC__c + SM_IVU_Municipal_AC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value AC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>