force-app/main/default/objects/Contract/fields/SM_Net_Monthly_offer__c.field-meta.xml
<CustomField>
    <fullName>SM_Net_Monthly_offer__c</fullName>
    <formula>SM_Monthly_offer__c + SM_IVU_State_Monthly_offer__c + SM_IVU_Municipal_Monthly_offer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly offer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>