force-app/main/default/objects/Contract/fields/SM_Next_installment_date__c.field-meta.xml
<CustomField>
    <fullName>SM_Next_installment_date__c</fullName>
    <formula>IF(SM_AC_collected__c
	,DATE(YEAR(ADDMONTHS(SM_Start_date__c, (SM_Charged_SB_Fees2__c - SM_Number_of_Refund__c))), MONTH(ADDMONTHS(SM_Start_date__c, (SM_Charged_SB_Fees2__c - SM_Number_of_Refund__c))), 28)
	,IF(ISNULL(SM_Charged_AC_Fees__c)
		,SM_AC_start_date__c
		,SM_AC_Split_Date__c
		)
	)</formula>
    <label>Next installment date</label>
    <type>Date</type>
</CustomField>