force-app/main/default/objects/Contract/fields/SM_NotIsACouplePlan_c__c.field-meta.xml
<CustomField>
    <fullName>SM_NotIsACouplePlan_c__c</fullName>
    <formula>IF(
				ISBLANK(SM_CoupleContract__c),
				&apos;X&apos;,
				&apos;&apos;
)</formula>
    <label>Not Is a Couple Plan</label>
    <type>Text</type>
</CustomField>