force-app/main/default/objects/Contract/fields/SM_Number_of_AC_Fees__c.field-meta.xml
<CustomField>
    <fullName>SM_Number_of_AC_Fees__c</fullName>
    <label>Number of AC Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>