force-app/main/default/objects/Contract/fields/SM_Number_of_late_payment_fee__c.field-meta.xml
<CustomField>
    <fullName>SM_Number_of_late_payment_fee__c</fullName>
    <label>Number of late payment fee</label>
    <summaryFilterItems>
        <field>SM_Payment__c.SM_Type__c</field>
        <operation>equals</operation>
        <value>Late payment fee</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_Payment__c.SM_Penalty_value__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>ACCEPTED</value>
    </summaryFilterItems>
    <summaryForeignKey>SM_Payment__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>