force-app/main/default/objects/Contract/fields/SM_Number_of_Refund__c.field-meta.xml
<CustomField>
    <fullName>SM_Number_of_Refund__c</fullName>
    <label>Number of Refund (not AC)</label>
    <summaryFilterItems>
        <field>SM_Payment__c.Payment_Status__c</field>
        <operation>contains</operation>
        <value>REFUND</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_Payment__c.SM_Amount__c</field>
        <operation>notEqual</operation>
        <value>25</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SM_Payment__c.SM_Original_Type__c</field>
        <operation>notEqual</operation>
        <value>AC</value>
    </summaryFilterItems>
    <summaryForeignKey>SM_Payment__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>