force-app/main/default/objects/Contract/fields/SM_OfferBySixMonthsDocument__c.field-meta.xml
<CustomField>
    <fullName>SM_OfferBySixMonthsDocument__c</fullName>
    <formula>SM_Net_Monthly_offer__c * 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer by Six Months (Document)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>