force-app/main/default/objects/Contract/fields/SM_Original_Upgraded_Product__c.field-meta.xml
<CustomField>
    <fullName>SM_Original_Upgraded_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Upgraded Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contracts (Original Upgraded Product)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>