force-app/main/default/objects/Contract/fields/SM_Partially_Charged_AC_Fees__c.field-meta.xml
<CustomField>
    <fullName>SM_Partially_Charged_AC_Fees__c</fullName>
    <description>This field will store whenever there&apos;s an incomplete charge</description>
    <inlineHelpText>This field will store whenever there&apos;s an incomplete charge</inlineHelpText>
    <label>Partially Charged AC Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>