force-app/main/default/objects/Contract/fields/SM_Partially_Charged_SB_Fees__c.field-meta.xml
<CustomField>
    <fullName>SM_Partially_Charged_SB_Fees__c</fullName>
    <description>This field stores the amount of partially failed transactions</description>
    <inlineHelpText>This field stores the amount of partially failed transactions</inlineHelpText>
    <label>Partially Charged SB Fees</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>