force-app/main/default/objects/Contract/fields/SM_Pay_method_sp__c.field-meta.xml
<CustomField>
    <fullName>SM_Pay_method_sp__c</fullName>
    <label>Pay method sp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>