force-app/main/default/objects/Contract/fields/SM_Payment_Condition__c.field-meta.xml
<CustomField>
    <fullName>SM_Payment_Condition__c</fullName>
    <label>Payment Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>