force-app/main/default/objects/Contract/fields/SM_Payment_day__c.field-meta.xml
<CustomField>
    <fullName>SM_Payment_day__c</fullName>
    <label>Payment day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>